Analytics added
